Update pom.xml to set Maven compiler release to 17